Rename app label from curl-yelb4 to curl-yelb

--- a/illumio-yelb-httprequest.yaml
+++ b/illumio-yelb-httprequest.yaml
@@ -19,7 +19,7 @@ spec:
   replicas: 4
   selector:
     matchLabels:
-      app: curl-yelb4
+      app: curl-yelb
   template:
     metadata:
       labels:
